# project_2024

ColorPicker/: loadjson.cpp  loadjson.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  popular_colors.json
SGBusApp/: CMakeLists.txt  bus_info.db  buseta.cpp  buseta.h  businfo.cpp  businfo.h  businfoquery.cpp  businfoquery.h  customitemdelegate.cpp  customitemdelegate.h  customitemmodel.cpp  customitemmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  page1.cpp  page1.h  page1.ui  page2.cpp  page2.h  page2.ui  page3.cpp  page3.ui  page4.cpp  page4.h  page4.ui  page5.cpp  page5.h  page5.ui  readme.md  resources.qrc  stackedpage.cpp  stackedpage.h  stackedpage.ui
SGBusApp/Application Image/: User Guide.docx
SGBusApp/py/: convert_sql.py  main.py  official_grab_image.py  sql_query.py
